SERVER-59023 Version internal writes to resharding temp ns as IGNORED.

Adds a retry once on StaleConfig exception helper to enable the
collection metadata for the temporary resharding collection to be
recovered from the config server.