src/mongo/db/s/resharding/resharding_data_copy_util.h
@@ -37,6 +37,7 @@
 #include "mongo/db/exec/document_value/value.h"
 #include "mongo/db/logical_session_id.h"
 #include "mongo/db/repl/oplog.h"
+#include "mongo/db/s/shard_filtering_metadata_refresh.h"
 #include "mongo/s/resharding/common_types_gen.h"
 #include "mongo/util/functional.h"
 
@@ -147,6 +148,30 @@ void updateSessionRecord(OperationContext* opCtx,
                          std::vector<StmtId> stmtIds,
                          boost::optional<repl::OpTime> preImageOpTime,
                          boost::optional<repl::OpTime> postImageOpTime);
+
+/**
+ * Calls and returns the value from the supplied lambda function.
+ *
+ * If a StaleConfig exception is thrown during its execution, then this function will attempt to
+ * refresh the collection and invoke the supplied lambda function a second time.
+ */
+template <typename Callable>
+auto withOneStaleConfigRetry(OperationContext* opCtx, Callable&& callable) {
+    try {
+        return callable();
+    } catch (const ExceptionForCat<ErrorCategory::StaleShardVersionError>& ex) {
+        if (auto sce = ex.extraInfo<StaleConfigInfo>()) {
+            const auto refreshed =
+                onShardVersionMismatchNoExcept(opCtx, sce->getNss(), sce->getVersionReceived())
+                    .isOK();
+
+            if (refreshed) {
+                return callable();
+            }
+        }
+        throw;
+    }
+}
 
 }  // namespace resharding::data_copy
 }  // namespace mongo
